Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105097

\since says the macro is a function even if it isn't

XMLWordPrintable

    • All
    • fffdb06383 (qt/qttools/dev) fffdb06383 (qt/tqtc-qttools/dev) a253d8e30d (qt/qttools/6.3) a7d815027f (qt/qttools/6.4) a253d8e30d (qt/tqtc-qttools/6.3) a7d815027f (qt/tqtc-qttools/6.4) d533fac8d2 (qt/tqtc-qttools/6.2) a7d815027f (qt/qttools/6.4.0)
    • Da Vinci 61, DaVinci 125, DaVinci 126

      The documentation of QT_NO_DEPRECATED_WARNINGS cheerily ends with

      This function was introduced in Qt 5.13.


      However, this \macro is in fact not a function, just a macro.
      It takes no parameters and expands to an integer constant.
      Frankly even if a macro is function-like, describing it here as a macro would be better than describing it as a function.
      I suspect we could find other topics than \macro in which \since's text should not talk about a function; but my guess is that this is a fixed wording.
      It would be better to adapt the wording of \since's message to the topic command to whose doc it relates.

      While I'm here, if at all possible, even when it is a \fn, if it's actually a single QDoc comment covering several functions, then "These functions were" would be a better opening to the text.
      By way of an example, see QDate::startOfDay().
      For other topic types, likewise, it would make sense to use the plural form in the \since statement appropriate to the topic.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paulwicking Paul Wicking
            Eddy Edward Welbourne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:

                There is 1 open Gerrit change