doc: Handle macros while generating since info

The generator treated macros as a function/method, resulting
in a since entry that referred to the macro as a function.

In addition, updated test data to ensure that the since entry
for a \macro is tested.

Change-Id: I648511705babad84163bc3e0ebd8233c4d46f4e2
Fixes: QTBUG-105097
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit fffdb06383ff9aa29bcd1988cb19ca3e927bd224)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>